--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>acolye</title>
+    <title>avy</title>
   </head>
   <body>
-    this is an acolyte unit
+    welcome... this is avy's happy server!
   </body>
 </html>
